--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --config build/webpack.dev.js --open",
     "build": "webpack --config build/webpack.prod.js --mode=production",
+    "build:dll": "webpack --config build/webpack.dll.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
