--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack-dev-server --config build/webpack.dev.js --open",
     "build": "webpack --config build/webpack.prod.js --mode=production",
     "build:dll": "webpack --config build/webpack.dll.config.js",
+    "analyz": "npm run build --report",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -35,6 +36,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
     "webpack-merge": "^4.2.2",
